chore: Fix line spacing and social icon size

--- a/style.css
+++ b/style.css
@@ -4,59 +4,42 @@
 
 body {
   background-image: url("assets/images/leather_1.png");
-  /* background-image: url("assets/images/fabric-regular.png"); */
-  /* background-image: url("assets/halftone.png"); */
-  /* background-image: url("assets/images/concrete_seamless.png"); */
-  /* background-image: url("assets/images/seamless_paper_texture.png"); */
 }
 
 h1,
-h2,
-h3,
 h4,
 h6 {
-  /* border-bottom: 2px solid #eee; */
-
-/* padding-bottom: 20px; */
-    /* margin-bottom: 15px; */
-   
-  line-height: 22px;
+  line-height: 24px;
   text-align: center;
   color: #444444;
   font-family: "Julius Sans One", sans-serif;
 }
 
 h1 {
-    margin-bottom: 30px;
-    font-size: xx-large;
-  }
+  padding-bottom: 20px;
+  margin-bottom: 40px;
+  font-size: xx-large;
+}
 
 .title {
-  margin-top: 200px;
+  margin-top: 250px;
   margin-bottom: 20px;
 }
-/* .subtitle{
-     margin: 0;
-     font-size: 20px;
-  } */
+.subtitle {
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.75;
+}
 
-  a {
-      color:#555555;
-  }
+a {
+  color: #555555;
+}
 
-/* .main-container {
-  background-color: #fff;
-  padding: 30px;
-  border: 1px solid #ddd;
-} */
-
-/* .main-container {
-  background-image: url("assets/images/dot-grid.png");
-} */
 .social {
   width: 25px;
   height: 25px;
   margin-top: 1px;
+  padding-right: 4px;
   margin-right: 8px;
   cursor: pointer;
 }
@@ -66,7 +49,7 @@ h1 {
 
 .footer {
   /* background-color: cornsilk; */
-  background-color: #ffffff;
+  background-color: #fff;
   color: #666;
   padding: 10px 0 30px 0;
   clear: both;
